chore: add analytics code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,8 @@
 
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
+
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="2eNO7jS4q3dKAsgvccIzbw" async></script>
   </head>
   <body>
     <div id="root"></div>
