chore: fix some flickering issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
 
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="2eNO7jS4q3dKAsgvccIzbw" async></script>
   </head>
-  <body>
+  <body style="background-color:101828;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
