chore: remove light mode, add some flavor :)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,10 @@
     <title>Word Chain - Daily Letter Swap Word Puzzle Game</title>
     <meta name="description" content="Challenge your vocabulary with Word Chain, the addictive daily letter-swapping puzzle! Swap letters to build word sequences and master the optimal path. New puzzles daily!">
     <meta name="keywords" content="Word Chain, daily word game, word puzzle, letter swap puzzle, vocabulary game, brain teaser, word chain puzzle, daily puzzle, word link game, strategy word game, word grid game">
-    <meta name="author" content="Your Name or Company Name">
+    <meta name="author" content="Kevin McDonald">
     <meta name="theme-color" content="#4F46E5">
+
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
     <link rel="canonical" href="https://wordchain.kmcd.dev/">
 
@@ -35,7 +37,7 @@
 
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="2eNO7jS4q3dKAsgvccIzbw" async></script>
   </head>
-  <body style="background-color:101828;">
+  <body style="background-color:#111827;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
