--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,32 +5,32 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Word Chain - Daily Letter Swap Word Puzzle Game</title>
-    <meta name="description" content="Challenge your vocabulary with Word Chain, the addictive daily letter-swapping puzzle! Swap letters to build word sequences and master the optimal path. New puzzles daily!">
-    <meta name="keywords" content="Word Chain, daily word game, word puzzle, letter swap puzzle, vocabulary game, brain teaser, word chain puzzle, daily puzzle, word link game, strategy word game, word grid game">
+    <title>wordseq - Daily Letter Swap Word Puzzle Game</title>
+    <meta name="description" content="Challenge your vocabulary with wordseq, the addictive daily letter-swapping puzzle! Swap letters to build word sequences and master the optimal path. New puzzles daily!">
+    <meta name="keywords" content="wordseq, daily word game, word puzzle, letter swap puzzle, vocabulary game, brain teaser, word chaining puzzle, daily puzzle, word link game, strategy word game, word grid game, word sequences">
     <meta name="author" content="Kevin McDonald">
     <meta name="theme-color" content="#4F46E5">
 
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
-    <link rel="canonical" href="https://wordchain.kmcd.dev/">
+    <link rel="canonical" href="https://wordseq.com/">
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-    <meta property="og:title" content="Word Chain - Daily Letter Swap Challenge!">
-    <meta property="og:description" content="Swap letters, forge words, and conquer the daily Word Chain puzzle! Can you find the optimal path?">
+    <meta property="og:title" content="wordseq - Daily Letter Swap Challenge!">
+    <meta property="og:description" content="Swap letters, forge words, and conquer the daily wordseq puzzle! Can you find the optimal path?">
     <meta property="og:type" content="game">
-    <meta property="og:url" content="https://wordchain.kmcd.dev/">
-    <meta property="og:image" content="https://wordchain.kmcd.dev/images/wordchain-social-preview.png">
-    <meta property="og:image:alt" content="Word Chain Game Logo and Gameplay Preview">
-    <meta property="og:site_name" content="Word Chain">
+    <meta property="og:url" content="https://wordseq.com/">
+    <meta property="og:image" content="https://wordseq.com/images/wordchain-social-preview.png">
+    <meta property="og:image:alt" content="wordseq Game Logo and Gameplay Preview">
+    <meta property="og:site_name" content="wordseq">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Word Chain - Daily Word Puzzle Fun!">
-    <meta name="twitter:description" content="Test your vocabulary and strategy with Word Chain! New letter-swapping puzzles daily.">
-    <meta name="twitter:url" content="https://wordchain.kmcd.dev/">
-    <meta name="twitter:image" content="https://wordchain.kmcd.dev/images/wordchain-twitter-card.png">
-    <meta name="twitter:image:alt" content="Word Chain Game Logo">
+    <meta name="twitter:title" content="wordseq - Daily Word Puzzle Fun!">
+    <meta name="twitter:description" content="Test your vocabulary and strategy with wordseq! New letter-swapping puzzles daily.">
+    <meta name="twitter:url" content="https://wordseq.com/">
+    <meta name="twitter:image" content="https://wordseq.com/images/wordchain-twitter-card.png">
+    <meta name="twitter:image:alt" content="wordseq Game Logo">
 
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
